--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,23 +9,11 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Start <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
     </ul>
     <div class="my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0"(click)="login()">Login</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" (click)="login()" *ngIf="(loggedIn$|async) == false">Login</button>
+      <span *ngIf="userProfile$|async as userProfile" style="color: #ffffff;">Logged in as {{userProfile?.nickname}}</span>
+      <button class="btn btn-outline-success my-2 my-sm-0" (click)="logout()" *ngIf="(loggedIn$|async) == true">Logout</button>
     </div>
   </div>
 </nav>
