--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,22 +18,25 @@
   </div>
 </nav>
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1 class="display-3">Hello, world!</h1>
-    <app-chat></app-chat>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    <h1 class="display-3">Welcome to travenas!</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <button routerLink="/checkin">Check-In</button>
+      </div>
+      <div class="col-md-4">
+      </div>
+      <div class="col-md-4">
+      </div>
+    </div>
   </div>
 </div>
 
 <div class="container">
   <router-outlet></router-outlet>
-
   <hr>
-
   <footer>
-    <p>&copy; Company 2017</p>
+    <p>&copy; rapidly prototyped for #hackzurich 2017</p>
   </footer>
 </div> <!-- /container -->
