--- a/frontend/src/app/start/start.component.html
+++ b/frontend/src/app/start/start.component.html
@@ -1,15 +1,19 @@
 <!-- Example row of columns -->
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4" style="text-align: center;">
+    <h2>plan</h2>
+    <p style="font-size: 10rem;"><i class="fa fa-map-signs" aria-hidden="true"></i></p>
+    <button routerLink="/" class="btn btn-outline-primary btn-lg">Choose your route</button>
+  </div>
+  <div class="col-md-4" style="text-align: center;">
     <h2>travel</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p style="font-size: 10rem;"><i class="fa fa-bus" aria-hidden="true"></i></p>
+    <button routerLink="/checkin" class="btn btn-outline-primary btn-lg">Check-In</button>
+    <button routerLink="/checkout" class="btn btn-outline-primary btn-lg">Check-Out</button>
   </div>
-  <div class="col-md-4">
-    <h2>entertain</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-  </div>
-  <div class="col-md-4">
-    <h2>assistance</h2>
-    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+  <div class="col-md-4" style="text-align: center;">
+    <h2>enjoy</h2>
+    <p style="font-size: 10rem;"><i class="fa fa-gamepad" aria-hidden="true"></i></p>
+    <button routerLink="/" class="btn btn-outline-primary btn-lg">Play</button>
   </div>
 </div>
