--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,7 @@
     </ul>
     <div class="my-2 my-lg-0">
       <button class="btn btn-outline-success my-2 my-sm-0" (click)="login()" *ngIf="(loggedIn$|async) == false">Login</button>
-      <span *ngIf="userProfile$|async as userProfile" style="color: #ffffff;">Logged in as {{userProfile?.nickname}}</span>
+      <span *ngIf="userProfile$|async as userProfile" style="color: #ffffff; margin-right: 1rem;">Logged in as {{userProfile?.nickname}}</span>
       <button class="btn btn-outline-success my-2 my-sm-0" (click)="logout()" *ngIf="(loggedIn$|async) == true">Logout</button>
     </div>
   </div>
@@ -21,15 +21,7 @@
 <div class="jumbotron">
   <div class="container">
     <h1 class="display-3">Welcome to travenas!</h1>
-    <div class="row">
-      <div class="col-md-4">
-        <button routerLink="/checkin">Check-In</button>
-      </div>
-      <div class="col-md-4">
-      </div>
-      <div class="col-md-4">
-      </div>
-    </div>
+    <p>Your digital travel community</p>
   </div>
 </div>
 
@@ -37,6 +29,6 @@
   <router-outlet></router-outlet>
   <hr>
   <footer>
-    <p>&copy; rapidly prototyped for #hackzurich 2017</p>
+    <p>rapidly prototyped for #hackzurich 2017</p>
   </footer>
 </div> <!-- /container -->
