--- a/frontend/src/app/start/start.component.html
+++ b/frontend/src/app/start/start.component.html
@@ -3,7 +3,7 @@
   <div class="col-md-4" style="text-align: center;">
     <h2>plan</h2>
     <p style="font-size: 10rem;"><i class="fa fa-map-signs" aria-hidden="true"></i></p>
-    <button routerLink="/" class="btn btn-outline-primary btn-lg">Choose your route</button>
+    <button routerLink="/plan" class="btn btn-outline-primary btn-lg">Choose your route</button>
   </div>
   <div class="col-md-4" style="text-align: center;">
     <h2>travel</h2>
