--- a/frontend/src/app/plan/plan.component.html
+++ b/frontend/src/app/plan/plan.component.html
@@ -27,7 +27,7 @@
         <td>{{connection.depart|date:'short'}}</td>
         <td>{{connection.to}}</td>
         <td>{{connection.arrival|date:'short'}}</td>
-        <td>{{connection.setRank}}</td>
+        <td>{{connection.ranking}}</td>
         <td><button type="button" class="btn btn-outline-primary" (click)="choose(connection)">Choose</button></td>
       </tr>
     </tbody>
