--- a/frontend/src/app/checkin/checkin.component.html
+++ b/frontend/src/app/checkin/checkin.component.html
@@ -5,8 +5,7 @@
 </div>
 <div id="sourceSelectPanel" style="display:none">
   <label for="sourceSelect">Change video source:</label>
-  <select id="sourceSelect" style="max-width:400px">
-  </select>
+  <select id="sourceSelect" style="max-width:400px"></select>
 </div>
 
 <label>Result:</label>
