--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,3 +3,7 @@
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
+
+h1, h2, h3, h4, h5, i.fa, span, div, p {
+  text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+}
