--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -12,3 +12,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.jumbotron + .container {
+  background-color: rgba(255, 255, 255, 0.5);
+}
